--- a/web.config
+++ b/web.config
@@ -1,22 +1,26 @@
 <configuration>
   <system.webServer>
-    
-    <!-- indicates that the index.js file is a node.js application 
-    to be handled by the iisnode module -->
-    
     <handlers>
       <add name="iisnode" path="app.js" verb="*" modules="iisnode" />
     </handlers>
-    
-    <!-- adds index.js to the default document list to allow 
-    URLs that only specify the application root location, 
-    e.g. http://mysite.antarescloud.com/ -->
-    
+    <rewrite>
+      <rules>
+        <rule name="NodeInspector" patternSyntax="ECMAScript">
+          <match url="^app.js\/debug[\/]?" />
+        </rule>
+        <rule name="DynamicContent">
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True" />
+          </conditions>
+          <action type="Rewrite" url="app.js" />
+        </rule>
+      </rules>
+    </rewrite>
     <defaultDocument enabled="true">
       <files>
         <add value="app.js" />
       </files>
     </defaultDocument>
-    
+    <directoryBrowse enabled="false" />
   </system.webServer>
 </configuration>
